plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.8'
	id 'io.spring.dependency-management' version '1.1.7'
	id "org.sonarqube" version "6.2.0.5505"
}

group = 'org.keinus'
version = '0.2.3'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	// Internal repository (if needed):
	maven { 
		url "http://192.168.50.22:8081/repository/maven-central/" 
		allowInsecureProtocol = true
	}
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-amqp'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-configuration-processor'
	implementation 'org.springframework.kafka:spring-kafka'
	implementation 'com.google.code.gson:gson:2.10.1'
	implementation 'io.krakens:java-grok:0.1.9'
	implementation 'org.yaml:snakeyaml:2.2'

	implementation("org.apache.httpcomponents.client5:httpclient5")
	
	// Database dependencies for Phase 1.1
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.xerial:sqlite-jdbc:3.47.1.0'
	implementation 'org.hibernate.orm:hibernate-community-dialects:6.6.4.Final'
	implementation 'org.flywaydb:flyway-core:10.21.0'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.security:spring-security-crypto'
	implementation 'com.fasterxml.jackson.core:jackson-databind'
	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml'

	// AOP for auto-reload on configuration changes
	implementation 'org.springframework.boot:spring-boot-starter-aop'

	// Swagger/OpenAPI documentation
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'

	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.amqp:spring-rabbit-test'
	testImplementation 'org.springframework.kafka:spring-kafka-test'
	testImplementation 'com.h2database:h2'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
